update format file (W726)

--- a/formats/classical_roman_lyric_poetry_gender_dynamics_complete.html
+++ b/formats/classical_roman_lyric_poetry_gender_dynamics_complete.html
@@ -180,12 +180,8 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1">CHAPTER 1</h2>
-<p>The marble was cool and unyielding against my cheek. A thin line of
-drool, warm and shameful, connected my face to the polished surface of
-the writing desk. I jerked upright, the scroll beneath my arm crinkling
-in protest. Late afternoon light, honey-thick and heavy with dust,
-slanted through the high window of my father’s tablinum. It illuminated
-the ghost of my own breath on the dark wood.</p>
+<p>Callimachus says a woman should be silent. My stylus scratches the
+wax, carving my name where his words end: Sulpicia.</p>
 <p>“Sleeping among the accounts again, Aelia? A fitting pillow for your
 ambitions.”</p>
 <p>My brother, Lucius, leaned in the doorway, a silhouette cut from the
